<resources>
    <string name="app_name">Spending Manager</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loyalty_cards">Loyalty Cards</string>
    <string name="title_activity_loyalty_cards">Loyalty Cards</string>
    <string name="title_activity_new_loyalty_card">New Loyalty Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="save">Save</string>
    <string name="card_photos">Card Photos</string>
    <string name="card_details">Card Details</string>
    <string name="barcode">Barcode</string>
    <string name="home">Home</string>
    <string name="accounts">Accounts</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transfer">Transfer</string>
    <string name="categories">Categories</string>
    <string name="limits">Limits</string>

    <string name="limit">Limit</string>

    <string name="food_drinks"><![CDATA[Food & Drinks]]></string>
    <string name="housing">Housing</string>
    <string name="shopping">Shopping</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>

    <string name="category_limits">Category Limits</string>
    <string name="save_changes">Save changes</string>
    <string name="default_categories">Default Categories</string>
    <string name="custom_categories">Custom Categories</string>

    <string name="statistics">Statistics</string>

    <string name="pick_color">Pick color</string>
    <string name="card_preview">Card Preview</string>
    <string name="title_activity_transaction1">Transaction1Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="price">Price</string>
    <string name="add_new_field">Add new field</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="delete_current_line">Delete current line</string>
    <string name="loyalty_card">Loyalty Card</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="account_details">Account Details</string>
    <string name="date">Date</string>
    <string name="filter_transactions">Filter transactions</string>
    <string name="planned_transactions">Planned Transactions</string>
    <string name="planned_expenses">Planned Expenses</string>
    <string name="frequency">Frequency</string>
    <string name="planned_income">Planned Income</string>
    <string name="add_new_planned_income">Add New Planned Income</string>
    <string name="add_new_planned_expense">Add New Planned Expense</string>
    <string name="title_activity_maps_test">Map</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="place">Place</string>
    <string name="please_select_place">Please select place</string>
    <string name="add_category">Add category</string>
    <string name="add">Add</string>
    <string name="expenditures">Expenditures</string>
    <string name="date_range">Date Range</string>

    <string name="day">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="biweekly">Biweekly</string>
    <string name="monthly">Monthly</string>
    <string name="transactions">Transactions</string>
    <string name="time_frame">Time frame</string>

    <string name="allowance_info">You\'ve used %1$s%% of your allowance.</string>
    <string name="allowance_used">Allowance used</string>
    <string name="actual_spending">Actual Spending</string>
    <string name="time">Time</string>
    <string name="over_under">Under / Over</string>
</resources>
