<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/transactions"/>
        <item
            android:id="@+id/nav_loyalty_cards"
            android:icon="@drawable/ic_card_membership_black_24dp"
            android:title="@string/loyalty_cards" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_bookmark_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_limits"
            android:icon="@drawable/ic_error_outline_black_24dp"
            android:title="@string/limits" />
        <item
            android:id="@+id/nav_planned_transactions"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/planned_transactions" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/chart_line"
            android:title="Statistics" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
