<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".transaction.TransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/transaction_income_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_gravity="center"
            android:textOn="@string/income"
            android:textOff="@string/income"
            android:checked="true"
            app:radius="0dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/transaction_expense_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:textOn="@string/expense"
            android:textOff="@string/expense"
            app:radius="0dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>

        <me.rishabhkhanna.customtogglebutton.CustomToggleButton
            android:id="@+id/transaction_transfer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:textOn="@string/transfer"
            android:textOff="@string/transfer"
            android:checked="true"
            app:radius="0dp">
        </me.rishabhkhanna.customtogglebutton.CustomToggleButton>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="text"/>

</LinearLayout>