<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/customborder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_item_price"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/category"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/transaction_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/default_categories"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_item_price"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/price"/>
        <EditText
            android:id="@+id/transaction_item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/limits_item_currency"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:entries="@array/supported_currencies"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/transaction_item_note"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/note"/>
        <EditText
            android:id="@+id/transaction_item_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/transaction_item_delete_iv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:contentDescription="@string/delete_current_line"
        android:src="@drawable/ic_delete_black_24dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>