<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context="android.spendingmanager.pv239.muni.fi.cz.spendingmanager.loyaltycards.NewLoyaltyCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/customborder"
            android:layout_marginBottom="10dp"
            android:elevation="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_details"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="4dp"/>
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_loyalty_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/card_number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_loyalty_card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/card_name"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:background="@drawable/customborder"
            android:elevation="2dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_photos"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/front"
                        android:layout_margin="3dp"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/new_loyalty_card_snap_front"
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:text="@string/back"
                        android:gravity="center"/>
                    <ImageView
                        android:id="@+id/new_loyalty_card_snap_back"
                        android:layout_width="90dp"
                        android:layout_height="80dp"
                        app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/customborder"
            android:layout_marginBottom="10dp"
            android:elevation="2dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/card_preview"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/new_loyalty_card_picked_color_iv"
                    android:layout_margin="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_colorize_black_24dp"/>
            </LinearLayout>
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorAccent" />

            <include
                android:id="@+id/new_loyalty_card_preview_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/loyalty_card_item" />

        </LinearLayout>

        <Button
            android:id="@+id/new_loyalty_card_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>
