<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:plainpie="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/customborder"
    android:layout_marginBottom="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:elevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/expenditures"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"/>
        <ToggleButton
            android:id="@+id/account_graphs_col_exp_tbtn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/collapse_expand_style"
            android:layout_margin="10dp"
            android:textOn=""
            android:textOff=""
            android:checked="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/account_graphs_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_marginEnd="20dp"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/account_graphs_categories_sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_range"/>
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/account_graphs_timeframe_sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/frequency"/>
            <!--
            <TextView
                android:id="@+id/account_graphs_date_range_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="01.04.2018 - 22.04.2018"/>
            -->
        </LinearLayout>
        <include layout="@layout/divider"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:id="@+id/chart_text_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:text="Account Balance"
                android:layout_marginBottom="10dp"/>

            <az.plainpie.PieView
                android:id="@+id/chart_pieView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                plainpie:inner_pie_padding="30"
                plainpie:percentage="75"
                android:layout_gravity="center"
                plainpie:percentage_size="45"
                plainpie:inner_text_visibility="true"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>